# my-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  assistant.py  config.py  gemini_client.py  knowledge_base.py  main.py  models.py  rate_limiter.py  security.py
app/data/: venue_metlife.json
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_assistant.py  test_gemini_client.py  test_knowledge_base.py  test_rate_limiter.py  test_security.py
